# qml_dictation

./: README.md  dictation.service  hello.py  justfile  lilium-palette.service  main.py  pyproject.toml  schema.sql  test.db
dictation/: __init__.py  app.py  audio.py  cli.py  controller.py  ipc.py  models.py  transcriber.py
dictation/qml/: Main.qml
docs/: installation.md  microphone-setup.md
lilium_palette/: __init__.py  app.py  cli.py
lilium_palette/qml/: Main.qml
openrc/: dictation  lilium-palette
palette/: app.py  cli.py  fuzzy.py  ipc.py  models.py
palette/qml/: Main.qml
runit/dictation/: run
runit/lilium-palette/: run
scripts/: create_test_db.py
