[project]
name = "palette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.1",
    "typer>=0.15.0",
]

[project.scripts]
lilium-palette = "palette.cli:app"

[tool.setuptools.package-data]
palette = ["qml/*.qml"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
