[project]
name = "lilium-palette"
version = "0.1.0"
description = "Link palette for searching notes and generating markdown/org links"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.1",
    "typer>=0.15.0",
]

[project.scripts]
lilium-palette = "lilium_palette.cli:app"

[tool.setuptools.packages.find]
include = ["lilium_palette*"]

[tool.setuptools.package-data]
lilium_palette = ["qml/*.qml"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
