[project]
name = "dictation"
version = "0.1.0"
description = "Dictation application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.1",
    "typer>=0.15.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
]

[project.scripts]
dictation = "dictation.cli:app"

[tool.setuptools.packages.find]
include = ["dictation*"]

[tool.setuptools.package-data]
dictation = ["qml/*.qml"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
